--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,32 @@
 #tensorflow[and-cuda]==2.6.0
-tensorflow-estimator==2.6.0
+#tensorflow-estimator==2.6.0
 
-keras==2.6.0
+#keras==2.6.0
 # tf-models-nightly==2.7.0.dev20211117
 # tf-nightly==2.7.0.dev20211117
-tensorflow-probability==0.14.1
-tensorflow-federated
+#tensorflow-probability==0.14.1
+#tensorflow-federated
+#tensorflow-datasets
+#edward2
+# uncertainty-baselines @ git+https://github.com/google/uncertainty-baselines.git@c53945244566e3e47c8ad2e285925d52f880f3ae
+## uncertainty-baselines==0.0.7 # Should be installed manually, ignoring the dependencies: `pip install uncertainty-baselines==0.0.7 --no-deps`
+#robustness_metrics @ git+https://github.com/google-research/robustness_metrics.git#egg=robustness_metrics
+
+
+
+
+numpy==1.19.5
+pandas==1.4.2
+protobuf==3.18.0
+scikit-learn==1.0
+scipy==1.7.1
+tensorflow-addons==0.16.1
 tensorflow-datasets
-edward2
-# uncertainty-baselines==0.0.7 # Should be installed manually, ignoring the dependencies: `pip install uncertainty-baselines==0.0.7 --no-deps`
-robustness_metrics @ git+https://github.com/google-research/robustness_metrics.git#egg=robustness_metrics
+tensorflow-estimator==2.6.0
+tensorflow-hub==0.12.0
+tensorflow-metadata==1.2.0
+tensorflow-probability==0.14.1
+robustness-metrics @ git+https://github.com/google-research/robustness_metrics.git@1ee550e0bf4ed5d479be0426956dc2fa758a820e
+edward2 @ git+https://github.com/google/edward2.git@5437837ae94b5a7152d9c25bc4175e3ef732e513
+uncertainty-baselines @ git+https://github.com/google/uncertainty-baselines.git@c53945244566e3e47c8ad2e285925d52f880f3ae
+typing-extensions==3.7.4.3
